parser.out
shift/reduce conflict in state 39 resolved as shift.
shift/reduce conflict in state 92 resolved as shift.


Unused terminals:


Grammar

Rule 1     mainstart -> TYPEINT MAIN LPAREN RPAREN LCURLY code RCURLY
Rule 2     code -> cinsomething code
Rule 3     code -> coutsomething code
Rule 4     code -> assignment code
Rule 5     code -> ifstart code
Rule 6     code -> whilestart code
Rule 7     whilestart -> WHILE LPAREN expressionBool RPAREN LCURLY code RCURLY
Rule 8     ifstart -> IF LPAREN expressionBool RPAREN LCURLY code RCURLY elseIfstart
Rule 9     elseIfstart -> ELSEIF LPAREN expressionBool RPAREN LCURLY code RCURLY elseIfstart
Rule 10    elseIfstart -> elsestart
Rule 11    elsestart -> ELSE LCURLY code RCURLY
Rule 12    elsestart -> <empty>
Rule 13    code -> <empty>
Rule 14    cinsomething -> CIN cinContinue
Rule 15    cinContinue -> DRA NAME cinContinue
Rule 16    cinContinue -> SEMICOLON
Rule 17    coutsomething -> COUT printable
Rule 18    printable -> DLA expression printable
Rule 19    printable -> DLA expressionBool printable
Rule 20    printable -> DLA expressionStr printable
Rule 21    printable -> DLA NAME printable
Rule 22    printable -> DLA ENDL SEMICOLON
Rule 23    assignment -> NAME EQUALS expression SEMICOLON
Rule 24    assignment -> NAME EQUALS expressionStr SEMICOLON
Rule 25    assignment -> NAME EQUALS expressionBool SEMICOLON
Rule 26    assignment -> TYPEINT NAME EQUALS expression SEMICOLON
Rule 27    assignment -> TYPESTRING NAME EQUALS expressionStr SEMICOLON
Rule 28    assignment -> TYPEBOOL NAME EQUALS expressionBool SEMICOLON
Rule 29    assignment -> TYPEINT NAME SEMICOLON
Rule 30    assignment -> TYPESTRING NAME SEMICOLON
Rule 31    assignment -> TYPEBOOL NAME SEMICOLON
Rule 32    expression -> expression PLUS expression
Rule 33    expression -> expression MINUS expression
Rule 34    expression -> expression TIMES expression
Rule 35    expression -> expression DIVIDE expression
Rule 36    expression -> NUMBER
Rule 37    expression -> NAME
Rule 38    expressionStr -> STRING
Rule 39    expressionBool -> BOOL
Rule 40    expression -> LPAREN expression RPAREN
Rule 41    expressionStr -> LPAREN expressionStr RPAREN
Rule 42    expressionStr -> expressionStr PLUS expressionStr
Rule 43    expressionBool -> expression BINARY expression
Rule 44    expressionBool -> expressionBool ANDOR expressionBool
Rule 45    expressionBool -> LPAREN expressionBool RPAREN
Rule 46    expression -> MINUS expression

Terminals, with rules where they appear

ANDOR                : 44
BINARY               : 43
BOOL                 : 39
CIN                  : 14
COUT                 : 17
DIVIDE               : 35
DLA                  : 18 19 20 21 22
DRA                  : 15
ELSE                 : 11
ELSEIF               : 9
ENDL                 : 22
EQUALS               : 23 24 25 26 27 28
IF                   : 8
LCURLY               : 1 7 8 9 11
LPAREN               : 1 7 8 9 40 41 45
MAIN                 : 1
MINUS                : 33 46
NAME                 : 15 21 23 24 25 26 27 28 29 30 31 37
NUMBER               : 36
PLUS                 : 32 42
RCURLY               : 1 7 8 9 11
RPAREN               : 1 7 8 9 40 41 45
SEMICOLON            : 16 22 23 24 25 26 27 28 29 30 31
STRING               : 38
TIMES                : 34
TYPEBOOL             : 28 31
TYPEINT              : 1 26 29
TYPESTRING           : 27 30
WHILE                : 7
error                : 

Nonterminals, with rules where they appear

assignment           : 4
cinContinue          : 14 15
cinsomething         : 2
code                 : 1 2 3 4 5 6 7 8 9 11
coutsomething        : 3
elseIfstart          : 8 9
elsestart            : 10
expression           : 18 23 26 32 32 33 33 34 34 35 35 40 43 43 46
expressionBool       : 7 8 9 19 25 28 44 44 45
expressionStr        : 20 24 27 41 42 42
ifstart              : 5
mainstart            : 0
printable            : 17 18 19 20 21
whilestart           : 6


Parsing method: SLR


state 0

    (0) S' -> . mainstart
    (1) mainstart -> . TYPEINT MAIN LPAREN RPAREN LCURLY code RCURLY

    TYPEINT         shift and go to state 1


    mainstart                      shift and go to state 2

state 1

    (1) mainstart -> TYPEINT . MAIN LPAREN RPAREN LCURLY code RCURLY

    MAIN            shift and go to state 3



state 2

    (0) S' -> mainstart .




state 3

    (1) mainstart -> TYPEINT MAIN . LPAREN RPAREN LCURLY code RCURLY

    LPAREN          shift and go to state 4



state 4

    (1) mainstart -> TYPEINT MAIN LPAREN . RPAREN LCURLY code RCURLY

    RPAREN          shift and go to state 5



state 5

    (1) mainstart -> TYPEINT MAIN LPAREN RPAREN . LCURLY code RCURLY

    LCURLY          shift and go to state 6



state 6

    (1) mainstart -> TYPEINT MAIN LPAREN RPAREN LCURLY . code RCURLY
    (2) code -> . cinsomething code
    (3) code -> . coutsomething code
    (4) code -> . assignment code
    (5) code -> . ifstart code
    (6) code -> . whilestart code
    (13) code -> .
    (14) cinsomething -> . CIN cinContinue
    (17) coutsomething -> . COUT printable
    (23) assignment -> . NAME EQUALS expression SEMICOLON
    (24) assignment -> . NAME EQUALS expressionStr SEMICOLON
    (25) assignment -> . NAME EQUALS expressionBool SEMICOLON
    (26) assignment -> . TYPEINT NAME EQUALS expression SEMICOLON
    (27) assignment -> . TYPESTRING NAME EQUALS expressionStr SEMICOLON
    (28) assignment -> . TYPEBOOL NAME EQUALS expressionBool SEMICOLON
    (29) assignment -> . TYPEINT NAME SEMICOLON
    (30) assignment -> . TYPESTRING NAME SEMICOLON
    (31) assignment -> . TYPEBOOL NAME SEMICOLON
    (8) ifstart -> . IF LPAREN expressionBool RPAREN LCURLY code RCURLY elseIfstart
    (7) whilestart -> . WHILE LPAREN expressionBool RPAREN LCURLY code RCURLY

    RCURLY          reduce using rule 13 (code -> .)
    CIN             shift and go to state 10
    COUT            shift and go to state 9
    NAME            shift and go to state 19
    TYPEINT         shift and go to state 17
    TYPESTRING      shift and go to state 16
    TYPEBOOL        shift and go to state 12
    IF              shift and go to state 18
    WHILE           shift and go to state 13


    coutsomething                  shift and go to state 7
    code                           shift and go to state 8
    ifstart                        shift and go to state 14
    assignment                     shift and go to state 15
    whilestart                     shift and go to state 11
    cinsomething                   shift and go to state 20

state 7

    (3) code -> coutsomething . code
    (2) code -> . cinsomething code
    (3) code -> . coutsomething code
    (4) code -> . assignment code
    (5) code -> . ifstart code
    (6) code -> . whilestart code
    (13) code -> .
    (14) cinsomething -> . CIN cinContinue
    (17) coutsomething -> . COUT printable
    (23) assignment -> . NAME EQUALS expression SEMICOLON
    (24) assignment -> . NAME EQUALS expressionStr SEMICOLON
    (25) assignment -> . NAME EQUALS expressionBool SEMICOLON
    (26) assignment -> . TYPEINT NAME EQUALS expression SEMICOLON
    (27) assignment -> . TYPESTRING NAME EQUALS expressionStr SEMICOLON
    (28) assignment -> . TYPEBOOL NAME EQUALS expressionBool SEMICOLON
    (29) assignment -> . TYPEINT NAME SEMICOLON
    (30) assignment -> . TYPESTRING NAME SEMICOLON
    (31) assignment -> . TYPEBOOL NAME SEMICOLON
    (8) ifstart -> . IF LPAREN expressionBool RPAREN LCURLY code RCURLY elseIfstart
    (7) whilestart -> . WHILE LPAREN expressionBool RPAREN LCURLY code RCURLY

    RCURLY          reduce using rule 13 (code -> .)
    CIN             shift and go to state 10
    COUT            shift and go to state 9
    NAME            shift and go to state 19
    TYPEINT         shift and go to state 17
    TYPESTRING      shift and go to state 16
    TYPEBOOL        shift and go to state 12
    IF              shift and go to state 18
    WHILE           shift and go to state 13


    coutsomething                  shift and go to state 7
    code                           shift and go to state 21
    ifstart                        shift and go to state 14
    assignment                     shift and go to state 15
    whilestart                     shift and go to state 11
    cinsomething                   shift and go to state 20

state 8

    (1) mainstart -> TYPEINT MAIN LPAREN RPAREN LCURLY code . RCURLY

    RCURLY          shift and go to state 22



state 9

    (17) coutsomething -> COUT . printable
    (18) printable -> . DLA expression printable
    (19) printable -> . DLA expressionBool printable
    (20) printable -> . DLA expressionStr printable
    (21) printable -> . DLA NAME printable
    (22) printable -> . DLA ENDL SEMICOLON

    DLA             shift and go to state 23


    printable                      shift and go to state 24

state 10

    (14) cinsomething -> CIN . cinContinue
    (15) cinContinue -> . DRA NAME cinContinue
    (16) cinContinue -> . SEMICOLON

    DRA             shift and go to state 25
    SEMICOLON       shift and go to state 27


    cinContinue                    shift and go to state 26

state 11

    (6) code -> whilestart . code
    (2) code -> . cinsomething code
    (3) code -> . coutsomething code
    (4) code -> . assignment code
    (5) code -> . ifstart code
    (6) code -> . whilestart code
    (13) code -> .
    (14) cinsomething -> . CIN cinContinue
    (17) coutsomething -> . COUT printable
    (23) assignment -> . NAME EQUALS expression SEMICOLON
    (24) assignment -> . NAME EQUALS expressionStr SEMICOLON
    (25) assignment -> . NAME EQUALS expressionBool SEMICOLON
    (26) assignment -> . TYPEINT NAME EQUALS expression SEMICOLON
    (27) assignment -> . TYPESTRING NAME EQUALS expressionStr SEMICOLON
    (28) assignment -> . TYPEBOOL NAME EQUALS expressionBool SEMICOLON
    (29) assignment -> . TYPEINT NAME SEMICOLON
    (30) assignment -> . TYPESTRING NAME SEMICOLON
    (31) assignment -> . TYPEBOOL NAME SEMICOLON
    (8) ifstart -> . IF LPAREN expressionBool RPAREN LCURLY code RCURLY elseIfstart
    (7) whilestart -> . WHILE LPAREN expressionBool RPAREN LCURLY code RCURLY

    RCURLY          reduce using rule 13 (code -> .)
    CIN             shift and go to state 10
    COUT            shift and go to state 9
    NAME            shift and go to state 19
    TYPEINT         shift and go to state 17
    TYPESTRING      shift and go to state 16
    TYPEBOOL        shift and go to state 12
    IF              shift and go to state 18
    WHILE           shift and go to state 13


    coutsomething                  shift and go to state 7
    code                           shift and go to state 28
    ifstart                        shift and go to state 14
    assignment                     shift and go to state 15
    whilestart                     shift and go to state 11
    cinsomething                   shift and go to state 20

state 12

    (28) assignment -> TYPEBOOL . NAME EQUALS expressionBool SEMICOLON
    (31) assignment -> TYPEBOOL . NAME SEMICOLON

    NAME            shift and go to state 29



state 13

    (7) whilestart -> WHILE . LPAREN expressionBool RPAREN LCURLY code RCURLY

    LPAREN          shift and go to state 30



state 14

    (5) code -> ifstart . code
    (2) code -> . cinsomething code
    (3) code -> . coutsomething code
    (4) code -> . assignment code
    (5) code -> . ifstart code
    (6) code -> . whilestart code
    (13) code -> .
    (14) cinsomething -> . CIN cinContinue
    (17) coutsomething -> . COUT printable
    (23) assignment -> . NAME EQUALS expression SEMICOLON
    (24) assignment -> . NAME EQUALS expressionStr SEMICOLON
    (25) assignment -> . NAME EQUALS expressionBool SEMICOLON
    (26) assignment -> . TYPEINT NAME EQUALS expression SEMICOLON
    (27) assignment -> . TYPESTRING NAME EQUALS expressionStr SEMICOLON
    (28) assignment -> . TYPEBOOL NAME EQUALS expressionBool SEMICOLON
    (29) assignment -> . TYPEINT NAME SEMICOLON
    (30) assignment -> . TYPESTRING NAME SEMICOLON
    (31) assignment -> . TYPEBOOL NAME SEMICOLON
    (8) ifstart -> . IF LPAREN expressionBool RPAREN LCURLY code RCURLY elseIfstart
    (7) whilestart -> . WHILE LPAREN expressionBool RPAREN LCURLY code RCURLY

    RCURLY          reduce using rule 13 (code -> .)
    CIN             shift and go to state 10
    COUT            shift and go to state 9
    NAME            shift and go to state 19
    TYPEINT         shift and go to state 17
    TYPESTRING      shift and go to state 16
    TYPEBOOL        shift and go to state 12
    IF              shift and go to state 18
    WHILE           shift and go to state 13


    coutsomething                  shift and go to state 7
    code                           shift and go to state 31
    ifstart                        shift and go to state 14
    assignment                     shift and go to state 15
    whilestart                     shift and go to state 11
    cinsomething                   shift and go to state 20

state 15

    (4) code -> assignment . code
    (2) code -> . cinsomething code
    (3) code -> . coutsomething code
    (4) code -> . assignment code
    (5) code -> . ifstart code
    (6) code -> . whilestart code
    (13) code -> .
    (14) cinsomething -> . CIN cinContinue
    (17) coutsomething -> . COUT printable
    (23) assignment -> . NAME EQUALS expression SEMICOLON
    (24) assignment -> . NAME EQUALS expressionStr SEMICOLON
    (25) assignment -> . NAME EQUALS expressionBool SEMICOLON
    (26) assignment -> . TYPEINT NAME EQUALS expression SEMICOLON
    (27) assignment -> . TYPESTRING NAME EQUALS expressionStr SEMICOLON
    (28) assignment -> . TYPEBOOL NAME EQUALS expressionBool SEMICOLON
    (29) assignment -> . TYPEINT NAME SEMICOLON
    (30) assignment -> . TYPESTRING NAME SEMICOLON
    (31) assignment -> . TYPEBOOL NAME SEMICOLON
    (8) ifstart -> . IF LPAREN expressionBool RPAREN LCURLY code RCURLY elseIfstart
    (7) whilestart -> . WHILE LPAREN expressionBool RPAREN LCURLY code RCURLY

    RCURLY          reduce using rule 13 (code -> .)
    CIN             shift and go to state 10
    COUT            shift and go to state 9
    NAME            shift and go to state 19
    TYPEINT         shift and go to state 17
    TYPESTRING      shift and go to state 16
    TYPEBOOL        shift and go to state 12
    IF              shift and go to state 18
    WHILE           shift and go to state 13


    coutsomething                  shift and go to state 7
    code                           shift and go to state 32
    ifstart                        shift and go to state 14
    assignment                     shift and go to state 15
    whilestart                     shift and go to state 11
    cinsomething                   shift and go to state 20

state 16

    (27) assignment -> TYPESTRING . NAME EQUALS expressionStr SEMICOLON
    (30) assignment -> TYPESTRING . NAME SEMICOLON

    NAME            shift and go to state 33



state 17

    (26) assignment -> TYPEINT . NAME EQUALS expression SEMICOLON
    (29) assignment -> TYPEINT . NAME SEMICOLON

    NAME            shift and go to state 34



state 18

    (8) ifstart -> IF . LPAREN expressionBool RPAREN LCURLY code RCURLY elseIfstart

    LPAREN          shift and go to state 35



state 19

    (23) assignment -> NAME . EQUALS expression SEMICOLON
    (24) assignment -> NAME . EQUALS expressionStr SEMICOLON
    (25) assignment -> NAME . EQUALS expressionBool SEMICOLON

    EQUALS          shift and go to state 36



state 20

    (2) code -> cinsomething . code
    (2) code -> . cinsomething code
    (3) code -> . coutsomething code
    (4) code -> . assignment code
    (5) code -> . ifstart code
    (6) code -> . whilestart code
    (13) code -> .
    (14) cinsomething -> . CIN cinContinue
    (17) coutsomething -> . COUT printable
    (23) assignment -> . NAME EQUALS expression SEMICOLON
    (24) assignment -> . NAME EQUALS expressionStr SEMICOLON
    (25) assignment -> . NAME EQUALS expressionBool SEMICOLON
    (26) assignment -> . TYPEINT NAME EQUALS expression SEMICOLON
    (27) assignment -> . TYPESTRING NAME EQUALS expressionStr SEMICOLON
    (28) assignment -> . TYPEBOOL NAME EQUALS expressionBool SEMICOLON
    (29) assignment -> . TYPEINT NAME SEMICOLON
    (30) assignment -> . TYPESTRING NAME SEMICOLON
    (31) assignment -> . TYPEBOOL NAME SEMICOLON
    (8) ifstart -> . IF LPAREN expressionBool RPAREN LCURLY code RCURLY elseIfstart
    (7) whilestart -> . WHILE LPAREN expressionBool RPAREN LCURLY code RCURLY

    RCURLY          reduce using rule 13 (code -> .)
    CIN             shift and go to state 10
    COUT            shift and go to state 9
    NAME            shift and go to state 19
    TYPEINT         shift and go to state 17
    TYPESTRING      shift and go to state 16
    TYPEBOOL        shift and go to state 12
    IF              shift and go to state 18
    WHILE           shift and go to state 13


    coutsomething                  shift and go to state 7
    code                           shift and go to state 37
    ifstart                        shift and go to state 14
    assignment                     shift and go to state 15
    whilestart                     shift and go to state 11
    cinsomething                   shift and go to state 20

state 21

    (3) code -> coutsomething code .

    RCURLY          reduce using rule 3 (code -> coutsomething code .)



state 22

    (1) mainstart -> TYPEINT MAIN LPAREN RPAREN LCURLY code RCURLY .

    $               reduce using rule 1 (mainstart -> TYPEINT MAIN LPAREN RPAREN LCURLY code RCURLY .)



state 23

    (18) printable -> DLA . expression printable
    (19) printable -> DLA . expressionBool printable
    (20) printable -> DLA . expressionStr printable
    (21) printable -> DLA . NAME printable
    (22) printable -> DLA . ENDL SEMICOLON
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression TIMES expression
    (35) expression -> . expression DIVIDE expression
    (36) expression -> . NUMBER
    (37) expression -> . NAME
    (40) expression -> . LPAREN expression RPAREN
    (46) expression -> . MINUS expression
    (39) expressionBool -> . BOOL
    (43) expressionBool -> . expression BINARY expression
    (44) expressionBool -> . expressionBool ANDOR expressionBool
    (45) expressionBool -> . LPAREN expressionBool RPAREN
    (38) expressionStr -> . STRING
    (41) expressionStr -> . LPAREN expressionStr RPAREN
    (42) expressionStr -> . expressionStr PLUS expressionStr

    NAME            shift and go to state 39
    ENDL            shift and go to state 47
    NUMBER          shift and go to state 41
    LPAREN          shift and go to state 44
    MINUS           shift and go to state 42
    BOOL            shift and go to state 43
    STRING          shift and go to state 45


    expressionBool                 shift and go to state 38
    expressionStr                  shift and go to state 40
    expression                     shift and go to state 46

state 24

    (17) coutsomething -> COUT printable .
